@@ -302,6 +302,20 @@ gap> Minimum(J);
                     </Description>
                 </ManSection>
 
+<ManSection>
+            <Oper Name="NormalizedIdeals" Arg="I" Label="for a numerical semigroup"/>
+            <Description>
+                <A>S</A> is  a numerical semigroup.
+                The output is the set of all the ideals of <A>S</A> whose minimum is zero; it uses the procedure explained in  <Cite Key="ASICMNS"></Cite>.
+
+                        <Example><![CDATA[
+gap> s:=NumericalSemigroup(3,5,7);;
+gap> is:=NormalizedIdeals(s);;
+gap> Set(is,MinimalGenerators);
+[ [ 0 ], [ 0, 1 ], [ 0, 1, 2 ], [ 0, 2 ], [ 0, 2, 4 ], [ 0, 4 ] ]
+]]></Example>
+    </Description>
+</ManSection>
 
                 <ManSection>
                     <Func Arg="n, I" Name="BelongsToIdealOfNumericalSemigroup"></Func>
@@ -326,21 +340,6 @@ true
 ]]></Example>
                     </Description>
                 </ManSection>
-
-<ManSection>
-            <Oper Name="NormalizedIdeals" Arg="I" Label="for a numerical semigroup"/>
-            <Description>
-                <A>S</A> is  a numerical semigroup.
-                The output is the set of all the ideals of <A>S</A> whose minimum is zero; it uses the procedure explained in  <Cite Key="ASICMNS"></Cite>.
-
-                        <Example><![CDATA[
-gap> s:=NumericalSemigroup(3,5,7);;
-gap> is:=NormalizedIdeals(s);;
-gap> Set(is,MinimalGenerators);
-[ [ 0 ], [ 0, 1 ], [ 0, 1, 2 ], [ 0, 2 ], [ 0, 2, 4 ], [ 0, 4 ] ]
-]]></Example>
-    </Description>
-</ManSection>
 
 
 				<ManSection>
@@ -1042,6 +1041,36 @@ gap> s:=NumericalSemigroup(5,7,9);;
 gap> i:=[0,1,2]+s;;
 gap> AperyList(i);
 [ 0, 1, 2, 8, 9 ]
+]]></Example>
+                     </Description>
+                </ManSection>
+
+
+                <ManSection>
+                    <Oper Arg="I,n" Name="KunzCoordinates" Label="for ideals of numerical semigroups with respect to element"/>
+                    <Description>
+                    <A>I</A> is an ideal and <A>n</A> is an integer that must be in the ambient numerical semigroup of <A>I</A>.
+ 					Computes the a tuple <M>(k_1,\dots,k_{<A>n</A>-1})</M> such that <M>\{0,k_1<A>n</A>+1, k_2<A>n</A>+2, \dots, k_{<A>n</A>-1}<A>n</A>-1\}</M> is the Apéry set of <A>I</A> with respect to <A>n</A>. See <Cite Key="ASICMNS"></Cite>
+
+                       <Example><![CDATA[
+gap> s:=NumericalSemigroup(6,17,19,21);;
+gap> i:=[0,2,7]+s;;
+gap> KunzCoordinates(i,17);
+[ 1, 0, 1, 1, 2, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1 ]
+]]></Example>
+                     </Description>
+                </ManSection>
+
+                <ManSection>
+                    <Oper Arg="I" Name="KunzCoordinates" Label="for ideals of numerical semigroups with respect to multiplicity"/>
+                    <Description>
+                    <A>I</A> is an ideal. Computes the Kunz coordinates of <A>I</A> with respect to the multiplicity of its ambient numerical semigroup.
+
+                       <Example><![CDATA[
+gap> s:=NumericalSemigroup(6,17,19,21);;
+gap> i:=[0,2,7]+s;;
+gap> KunzCoordinates(i);
+[ 1, 0, 3, 4, 2 ]
 ]]></Example>
                      </Description>
                 </ManSection>
